fix: remove cpf required
