# docs/swagger.json
@@ -1028,15 +1028,11 @@
         "user.CreateProfileParams": {
             "type": "object",
             "required": [
-                "document",
                 "lastName",
                 "name",
                 "phone"
             ],
             "properties": {
-                "document": {
-                    "type": "string"
-                },
                 "lastName": {
                     "type": "string"
                 },
